@@ -4,9 +4,9 @@ package com.example.exchanger.controller;
 import com.example.exchanger.Exception.ApiException;
 import com.example.exchanger.Exception.ErrorResponse;
 import com.example.exchanger.model.ExchangeRate;
-import com.example.exchanger.service.ExchangeRateService;
+import com.example.exchanger.service.ExchangeRateServiceImpl;
 import com.example.exchanger.util.Connector;
-import com.example.exchanger.util.ResponseSender;
+import com.example.exchanger.util.JsonUtil;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
@@ -22,37 +22,37 @@ import java.util.stream.Collectors;
 @WebServlet(name="ExchangeRateController", value="/exchangeRate/*")
 public class ExchangeRateController extends HttpServlet {
     Connector connector;
-    ExchangeRateService exchangeRateService;
-    ResponseSender responseSender;
+    ExchangeRateServiceImpl exchangeRateServiceImpl;
+    JsonUtil jsonUtil;
 
     public ExchangeRateController() {
         this.connector = new Connector();
-        this.exchangeRateService = new ExchangeRateService(connector);
-        this.responseSender = new ResponseSender();
+        this.exchangeRateServiceImpl = new ExchangeRateServiceImpl(connector);
+        this.jsonUtil = new JsonUtil();
     }
 
     public void doPatch(HttpServletRequest req, HttpServletResponse resp) throws IOException {
         try {
             String pathInfo = req.getPathInfo().substring(1).toUpperCase();
             if (pathInfo.length() != 6) {
-                responseSender.sendResponse(new ErrorResponse("Коды валют пары отсутствуют в адресе"), 400, resp);
+                jsonUtil.sendJsonResponse(resp, 400, new ErrorResponse("Коды валют пары отсутствуют в адресе"));
                 return;
             }
             Map<String, String> map = parseFormData(req);
             String bodyRate = map.get("rate");
             if (bodyRate == null) {
-                responseSender.sendResponse(new ErrorResponse("Отсутствует нужное поле формы"), 400, resp);
+                jsonUtil.sendJsonResponse(resp, 400, new ErrorResponse("Отсутствует нужное поле формы"));
                 return;
             }
             String baseCurr = pathInfo.substring(0,3);
             String targetCurr = pathInfo.substring(3);
             float rate = Float.parseFloat(bodyRate);
-            ExchangeRate exchangeRate = exchangeRateService.updateExchangeRate(baseCurr, targetCurr, rate);
-            responseSender.sendResponse(exchangeRate, 200, resp);
+            ExchangeRate exchangeRate = exchangeRateServiceImpl.updateExchangeRate(baseCurr, targetCurr, rate);
+            jsonUtil.sendJsonResponse(resp, 200, exchangeRate);
         } catch (ApiException e) {
-            responseSender.sendResponse(new ErrorResponse(e.getMessage()), e.getStatusCode(), resp);
+            jsonUtil.sendJsonResponse(resp, e.getStatusCode(), new ErrorResponse(e.getMessage()));
         } catch (Exception e) {
-            responseSender.sendResponse(new ErrorResponse("База данных недоступна"), 500, resp);
+            jsonUtil.sendJsonResponse(resp, 500, new ErrorResponse("Внутренняя ошибка сервера"));
         }
     }
 
@@ -60,17 +60,17 @@ public class ExchangeRateController extends HttpServlet {
         try {
             String pathInfo = req.getPathInfo().substring(1).toUpperCase();
             if (pathInfo.length() != 6) {
-                responseSender.sendResponse(new ErrorResponse("Коды валют пары отсутствуют в адресе"), 400, resp);
+                jsonUtil.sendJsonResponse(resp, 400, new ErrorResponse("Коды валют пары отсутствуют в адресе"));
                 return;
             }
             String baseCurr = pathInfo.substring(0,3);
             String targetCurr = pathInfo.substring(3);
-            ExchangeRate exchangeRate = exchangeRateService.getExchangeRate(baseCurr, targetCurr);
-            responseSender.sendResponse(exchangeRate, 200, resp);
+            ExchangeRate exchangeRate = exchangeRateServiceImpl.getExchangeRate(baseCurr, targetCurr);
+            jsonUtil.sendJsonResponse(resp, 200, exchangeRate);
         } catch (ApiException e) {
-            responseSender.sendResponse(new ErrorResponse(e.getMessage()), e.getStatusCode(), resp);
+            jsonUtil.sendJsonResponse(resp, e.getStatusCode(), new ErrorResponse(e.getMessage()));
         } catch (Exception e) {
-            responseSender.sendResponse(new ErrorResponse("База данных недоступна"), 500, resp);
+            jsonUtil.sendJsonResponse(resp, 500, new ErrorResponse("Внутренняя ошибка сервера"));
         }
     }
     private Map<String, String> parseFormData(HttpServletRequest request) throws IOException {
@@ -80,8 +80,8 @@ public class ExchangeRateController extends HttpServlet {
         for (String pair : pairs) {
             String[] keyValue = pair.split("=");
             if (keyValue.length == 2) {
-                String key = URLDecoder.decode(keyValue[0], StandardCharsets.UTF_8.name());
-                String value = URLDecoder.decode(keyValue[1], StandardCharsets.UTF_8.name());
+                String key = URLDecoder.decode(keyValue[0], StandardCharsets.UTF_8);
+                String value = URLDecoder.decode(keyValue[1], StandardCharsets.UTF_8);
                 formData.put(key, value);
             }
         }
